--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AlaaAbdelmotlep/task-app#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.3",
